prowlarr/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: prowlarr
  name: prowlarr
  namespace: servarr
spec:
  ports:
    - name: "web"
      port: 9696
      targetPort: 9696
  selector:
    app: prowlarr
  type: ClusterIP
